# yashima-x86

./: .gitignore  .rustfmt.toml  Cargo.toml  GNUmakefile  README.md  build.rs  createfont.sh  createiso.sh  limine.cfg  linker.ld  run.sh  x86_64-yashima.json
.cargo/: config.toml
src/: main.rs
src/arch/: mod.rs
src/arch/x86_64/: control.rs  cpuid.rs  gdt.rs  idt.rs  mod.rs  paging.rs
src/bit_utils/: mod.rs
src/fontmodule/: char_buffer.rs  font.rs  fontloader.rs  mod.rs
src/mem/: ALLOC.md  bitmap.rs  bootstrap_allocator.rs  mod.rs  page.rs  page_frame_allocator.rs
