[package]
name = "yashima"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.2.0"
rlibc = "1.0.0"
x86_64 = { version = "0.15.1", features = ["abi_x86_interrupt"] }
lazy_static = { version = "1.4.0", default-features = false, features = [
    "spin_no_std",
] }
spin = "0.9.8"
bitflags = "2.5.0"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
